name:                amf
version:             0.1.0.0
synopsis:            AMF3 serializer/deserializer
description:         AMF3 serializer/deserializer
homepage:            https://github.com/phylake/avm3/tree/master/amf
license:             MIT
license-file:        LICENSE
author:              Brandon Cook
maintainer:          phylake@gmail.com
-- copyright:           
category:            Data
build-type:          Simple
cabal-version:       >=1.8
extra-source-files:
  LICENSE

library
  exposed-modules:     Data.Amf
                     , Data.Amf.Def
                     , Data.Amf.Serialize
                     , Data.Amf.Deserialize
  other-modules:       Data.Amf.Deserialize.Def
                     , Data.Amf.Deserialize.Util
                     , Util.Words
  build-depends:       base ==4.5.*
                     , bytestring ==0.9.2.1
                     , data-binary-ieee754 ==0.4.3
                     , monadLib ==3.7.2
                     , mtl ==2.0.1.0
                     , conduit ==1.0.5
                     , void ==0.6
                     , deepseq ==1.3.0.0
                     , transformers ==0.2.2.0

source-repository head
  type:     git
  location: git://github.com/phylake/avm3.git
