name:                amf
version:             0.1.0.0
synopsis:            AMF3 serializer/deserializer
description:         AMF3 serializer/deserializer
                     <http://wwwimages.adobe.com/www.adobe.com/content/dam/Adobe/en/devnet/amf/pdf/amf-file-format-spec.pdf>
                     .
                     Includes executables amfToJson and jsonToAmf
homepage:            https://github.com/phylake/avm3/tree/master/amf
license:             MIT
license-file:        LICENSE
author:              Brandon Cook
maintainer:          phylake@gmail.com
-- copyright:           
category:            Data
build-type:          Simple
cabal-version:       >=1.8
extra-source-files:
  LICENSE

library
  exposed-modules:     Data.Amf
                     , Data.Amf.Def
                     , Data.Amf.Serialize
                     , Data.Amf.Deserialize
                     , Data.Amf.Deserialize.Json
  other-modules:       Data.Amf.Deserialize.Def
                     , Data.Amf.Deserialize.Util
                     , Util.Words
  build-depends:       base ==4.6.*
                     , aeson ==0.6.*
                     , bytestring ==0.*
                     , conduit ==1.*
                     , data-binary-ieee754 ==0.4.*
                     , deepseq ==1.*
                     , monadLib ==3.7.*
                     , transformers ==0.*
                     , void ==0.*

-- executable amfToJson
  -- main-is:             bin/amfToJson.hs
  -- other-modules:       
  -- build-depends:       base ==4.6.*

-- executable jsonToAmf
  -- main-is:             bin/jsonToAmf.hs
  -- other-modules:       
  -- build-depends:       base ==4.6.*

source-repository head
  type:     git
  location: https://github.com/phylake/avm3.git

source-repository this
  type:     git
  location: https://github.com/phylake/avm3/tree/master/amf
