name:                swf
version:             0.1.0.0
synopsis:            SWF parser
-- description:         
license:             MIT
license-file:        LICENSE
author:              Brandon Cook
maintainer:          phylake@gmail.com
-- copyright:           
category:            Data
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Data.Swf.Def,
                       Data.Swf.Deserialize,
                       Data.Swf.Util,
                       Util.File
  -- other-modules:       Util.File
  build-depends:       base ==4.6.*,
                       bytestring ==0.10.*,
                       conduit ==1.0.*,
                       data-binary-ieee754 ==0.4.*,
                       directory ==1.2.*,
                       filepath ==1.3.*,
                       monadLib ==3.7.*,
                       mtl ==2.1.*,
                       transformers ==0.3.*,
                       zlib-conduit ==1.0.*,
                       void ==0.6.*
